--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -83,15 +83,22 @@
     "setup_guide_find_username_text": "Mask needs the username to connect your profile to your persona.",
     "setup_guide_connect_auto": "Connect",
     "setup_guide_connect_failed": "Re-Connect",
+    "setup_guide_verify": "Verfiy",
+    "setup_guide_verify_dismiss": "Don't show again.",
+    "setup_guide_verify_checking": "Checking",
+    "setup_guide_verify_post_not_found": "No verification post found",
+    "setup_guide_verifying": "Verfiying",
+    "setup_guide_verifying_failed": "Re-Verfiy",
     "user_guide_tip_connected": "You have connected to this account successfully.",
+    "user_guide_tip_need_verify_on_next_id": "Mask Network requires you to post an verification tweet to access Next.ID-based products.",
     "setup_guide_say_hello_content": "Hello Mask world. This is my first encrypted message. Install https://mask.io to send me encrypted post. ",
     "setup_guide_say_hello_follow": "Follow {{account}} to explore Web 3.0.",
-    "setup_guide_pin_tip_0": "Don't forget to pin Mask Network in your browser toolbar to access web 3.0 easily.",
-    "setup_guide_pin_tip_1": "Click on ",
-    "setup_guide_pin_tip_1_s": " at top right of your browser.",
-    "setup_guide_pin_tip_2": "Find Mask Network in the list of extensions and click the ",
-    "setup_guide_pin_tip_2_s": " button.",
-    "setup_guide_pin_tip_3": "Pinned successfully.",
+    "setup_guide_pin_tip": "Don't forget to pin Mask Network in your browser toolbar to access web 3.0 easily.",
+    "setup_guide_pin_tip_step_click_left": "Click on ",
+    "setup_guide_pin_tip_step_click_right": " at top right of your browser.",
+    "setup_guide_pin_tip_step_find_left": "Find Mask Network in the list of extensions and click the ",
+    "setup_guide_pin_tip_step_find_right": " button.",
+    "setup_guide_pin_tip_successfully": "Pinned successfully.",
     "setup_guide_pin_dismiss": "Don't show again.",
     "user_guide_tip_1": "Connect wallet to explore multi-chain dApps.",
     "user_guide_tip_2": "Setup your exclusive NFT Avatar, explore the endless possibilities of Web 3.0.",
