--- a/packages/mask/src/plugins/NextID/locales/en-US.json
+++ b/packages/mask/src/plugins/NextID/locales/en-US.json
@@ -5,6 +5,10 @@
     "connect_wallet__other_user_tip_intro": "Currently no wallet is bound by this account.",
     "connect_wallet_tip_intro": "Connect your wallet here.",
     "connect_wallet_tip": "In this Web 3 section, you can show your address for receiving tips, your NFT collection, donation records, and other on-chain information to friends who have installed Mask Network.",
+    "verify_Twitter_ID_intro": "Verify your Twitter ID here.",
+    "verify_Twitter_ID": "In this Next.ID section, you need to verify your Twitter ID to use Next.ID-based products.",
+    "verify_other_Twitter_ID_intro": "This user has not connected wallets here.",
+    "verify_Twitter_ID_button": "Verify your Twitter ID",
     "verify_wallet_button": "Verify your wallet",
     "add_wallet_button": "Add wallet",
     "verify_wallet_dialog_title": "Verify your wallet",
