--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -994,7 +994,12 @@
     "popups_wallet_no_transactions": "You have no transactions",
     "popups_missing_parameter_caption": "Please close this page.",
     "popups_persona_connect_to": "Connect to {{type}}",
+    "popups_persona_to_be_verified": "To be verified",
     "popups_persona_disconnect": "Disconnect",
+    "popups_persona_disconnect_confirmation": "Disconnect confirmation?",
+    "popups_persona_disconnect_confirmation_description": "This persona verification record will no longer show up in your verification profile page. Your\n Mask friends can no longer send encrypted message to you by this persona or check your Web 3\n products",
+    "popups_persona": "Persona",
+    "popups_twitter_id": "Twitter ID",
     "popups_persona_logout": "Log out",
     "popups_persona_disconnect_tip": "After logging out, your associated social accounts can no longer decrypt past encrypted messages. If you need to reuse your account, you can recover your account with your identity, private key, local or cloud backup.",
     "popups_persona_persona_name_exists": "The persona name already exists",
