--- a/packages/plugins/CyberConnect/src/locale/ko-KR.po
+++ b/packages/plugins/CyberConnect/src/locale/ko-KR.po
@@ -17,3 +17,40 @@ msgstr ""
 "X-Crowdin-Language: ko\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/CyberConnect/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 960\n"
+
+#: src/SiteAdaptor/index.tsx:46
+msgid "CyberConnect"
+msgstr "CyberConnect"
+
+#: src/SiteAdaptor/index.tsx:45
+msgid "Decentralized social graph protocol for user-centric Web3."
+msgstr "사용자 중심 웹3를 위한 탈중앙화 소셜 그래프 프로토콜"
+
+#: src/SiteAdaptor/ConnectButton.tsx:106
+msgid "Follow Now"
+msgstr "바로 팔로우하기"
+
+#: src/SiteAdaptor/Profile.tsx:191
+msgid "Followers"
+msgstr "팔로워"
+
+#: src/SiteAdaptor/Profile.tsx:186
+msgid "Followings"
+msgstr "팔로잉"
+
+#: src/SiteAdaptor/FollowersPage.tsx:24
+#: src/SiteAdaptor/Profile.tsx:130
+msgid "Load failed"
+msgstr "로딩 실패"
+
+#: src/SiteAdaptor/Profile.tsx:123
+msgid "No followers."
+msgstr "팔로워가 없습니다."
+
+#: src/SiteAdaptor/Profile.tsx:124
+msgid "No following friends."
+msgstr "팔로잉 친구가 없습니다."
+
+#: src/SiteAdaptor/ConnectButton.tsx:107
+msgid "Unfollow"
+msgstr "팔로우 취소"
