--- a/packages/plugins/Savings/src/locale/zh-CN.json
+++ b/packages/plugins/Savings/src/locale/zh-CN.json
@@ -1,1 +1,35 @@
-{ "messages": {} }
+{
+    "messages": {
+        "QpgBEp": [["0"], " days"],
+        "hehnjM": "金额",
+        "70wH1Q": "年利率",
+        "bUUVED": "资产",
+        "kj3M8S": "存入",
+        "DPfwMq": "完成",
+        "iPMIoT": "输入金额",
+        "7Bj3x9": "失败",
+        "bBzHQT": "输入金额低于最低金额",
+        "m6RmA/": [["0"], " 余额不足"],
+        "oxKup1": ["Insufficient $", ["0"], " balance"],
+        "e3hCsY": "Lido Exchange Rate",
+        "yQE2r9": "加载中",
+        "HsoakN": "masknetwork",
+        "ojlMCx": ["Minimum withdraw amount is ", ["MINIMUM_AMOUNT"], " ", ["0"]],
+        "LLf+t1": "未找到存款协议。",
+        "FZg3wM": "操作",
+        "7hZyUn": "存入操作处理中",
+        "i2x+p1": "取出操作处理中",
+        "nVT2pJ": "realMaskNetwork",
+        "Baj2MJ": "储蓄",
+        "Z/tioj": ["兑换 ", ["0"]],
+        "GWKfFr": [
+            "To use Lido, you need to wait ",
+            ["0"],
+            " days. Using other swap aggregators is faster, but the exchange rate is lower than 1:1."
+        ],
+        "e34ZOD": "Waiting time",
+        "sb9Y58": "钱包",
+        "OsyKSt": "提取",
+        "qhKyO3": ["提取 ", ["0"]]
+    }
+}
