--- a/packages/plugins/ScamSniffer/src/locale/ja-JP.po
+++ b/packages/plugins/ScamSniffer/src/locale/ja-JP.po
@@ -17,3 +17,15 @@ msgstr ""
 "X-Crowdin-Language: ja\n"
 "X-Crowdin-File: /[DimensionDev.Maskbook] develop/packages/plugins/ScamSniffer/src/locale/en-US.po\n"
 "X-Crowdin-File-ID: 988\n"
+
+#: src/SiteAdaptor/ScamAlert.tsx:129
+msgid "Auto report the scam links to MetaMask"
+msgstr "詐欺リンクをMetaMaskに自動的に報告する"
+
+#: src/SiteAdaptor/ScamAlert.tsx:122
+msgid "Be careful what you visit and sign!"
+msgstr "あなたが訪問して署名するものに注意してください!"
+
+#: src/SiteAdaptor/ScamAlert.tsx:95
+msgid "Similar Project"
+msgstr ""
